// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Form component renders single component correctly 1`] = `
<div
  className="form"
>
  <div
    className="button-container"
  >
    <WithStyles(Button)
      color="primary"
      name="submit"
      onClick={[Function]}
      variant="contained"
    >
      Edit skill
    </WithStyles(Button)>
  </div>
</div>
`;

exports[`test Header component render Header component 1`] = `
<ButtonAppBar
  classes={
    Object {
      "grow": "ButtonAppBar-grow-7",
      "menuButton": "ButtonAppBar-menuButton-8",
      "root": "ButtonAppBar-root-6",
    }
  }
  logout="handleLogout"
  username="Valdemar"
/>
`;

exports[`test Login Components render Login component 1`] = `
<SignIn
  classes={
    Object {
      "avatar": "SignIn-avatar-3",
      "form": "SignIn-form-4",
      "main": "SignIn-main-1",
      "paper": "SignIn-paper-2",
      "submit": "SignIn-submit-5",
    }
  }
/>
`;

exports[`test components from InputFields render DateInput from InputFields 1`] = `
<Component
  classes={
    Object {
      "container": "Component-container-12",
      "error": "Component-error-14",
      "textField": "Component-textField-13",
    }
  }
/>
`;

exports[`test components from InputFields render LevelPicker from InputFields 1`] = `
<Component
  classes={
    Object {
      "container": "Component-container-15",
      "error": "Component-error-17",
      "textField": "Component-textField-16",
    }
  }
/>
`;

exports[`test components from InputFields render SkillNameInput from InputFields component 1`] = `
<Component
  classes={
    Object {
      "container": "Component-container-9",
      "error": "Component-error-11",
      "textField": "Component-textField-10",
    }
  }
  data="skill"
  value="python"
/>
`;

exports[`test components from InputFields render TextArea from InputFields 1`] = `
<Component
  classes={
    Object {
      "container": "Component-container-18",
      "error": "Component-error-20",
      "textField": "Component-textField-19",
    }
  }
/>
`;
